# aoc-2021

./: .gitignore  CHANGELOG.md  Makefile  README.md  aoc2021.cabal  get  watcher
day1/: main.hs
day2/: Interpreter.cabal  main.hs
day3/: main.hs
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Main.hs  Util.hs
src/Util/: Binary.hs  Extra.hs  Input.hs  List.hs  Parser.hs  Search.hs  Transform.hs
src/Visual/: Day11.hs  Day13.hs
test/: Day01Test.hs  Day02Test.hs  Day03Test.hs  Day04Test.hs  Day05Test.hs  Day06Test.hs  Day07Test.hs  Day08Test.hs  Day09Test.hs  Day10Test.hs  Day11Test.hs  Day12Test.hs  Day13Test.hs  Day14Test.hs  Day15Test.hs  Day16Test.hs  Day17Test.hs  Day18Test.hs  Day19Test.hs  Day20Test.hs  Day21Test.hs  Day22Test.hs  Day23Test.hs  Day24Test.hs  Day25Test.hs  Main.hs
