cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

author:             Alexandru Jercan
maintainer:         jercan_alex27@yahoo.com

extra-source-files:
    CHANGELOG.md
    README.md

executable Aoc2021
    main-is:          Main.hs

    build-depends:    base ^>=4.13.0.0,
                      mtl
    other-modules:    Day01,
                      Day02,
                      Day03
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite Aoc2021Test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    ghc-options:      -Wall -rtsopts
    build-depends:    base ^>=4.13.0.0,
                      mtl,
                      HTF > 0.9
    other-modules:    Day01Test,
                      Day02Test,
                      Day03Test,
                      Day01,
                      Day02,
                      Day03
    hs-source-dirs:   test,
                      src
    default-language: Haskell2010
