cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0

author:             Alexandru Jercan
maintainer:         jercan_alex27@yahoo.com

extra-source-files:
    CHANGELOG.md
    README.md

executable Aoc2021
    main-is:          Main.hs

    build-depends:    base ^>=4.13.0.0,
                      mtl, split, containers, parsec, PSQueue
    other-modules:    Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08,
                      Day09, Day10, Day11, Day12, Day13, Day14, Day15, Day16,
                      Day17, Day18, Day19, Day20, Day21, Day22, Day23, Day24,
                      Day25, Util.Extra, Util.Search, Util.Binary, Util.Parser
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite Aoc2021Test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    ghc-options:      -Wall -rtsopts
    build-depends:    base ^>=4.13.0.0,
                      mtl, split, HTF > 0.9, containers, parsec, PSQueue
    other-modules:    Day01Test, Day02Test, Day03Test, Day04Test, Day05Test,
                      Day06Test, Day07Test, Day08Test, Day09Test, Day10Test,
                      Day11Test, Day12Test, Day13Test, Day14Test, Day15Test,
                      Day16Test, Day17Test, Day18Test, Day19Test, Day20Test,
                      Day21Test, Day22Test, Day23Test, Day24Test, Day25Test,
                      Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08,
                      Day09, Day10, Day11, Day12, Day13, Day14, Day15, Day16,
                      Day17, Day18, Day19, Day20, Day21, Day22, Day23, Day24,
                      Day25, Util.Extra, Util.Search, Util.Binary, Util.Parser
    hs-source-dirs:   test,
                      src
    default-language: Haskell2010
